deploy/k8s/base/scaling-miner/p2p-wss-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: p2p-wss-ingress-9906
  labels:
    service: p2p
spec:
  entryPoints:
    - p2p-wss # Service port expecting WSS
  routes:
  - match: Host(`m.scaling.ubsv.dev`)
    kind: Rule
    services:
    - name: p2p-service
      port: 9906  # Service port expecting WS
  tls:
    secretName: wildcard-tls-custom
